--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -42,9 +42,18 @@
   margin-top: 5px;
   font-weight: 700;
   font-size: 12px;
-  margin-left: 8px;
+  margin-bottom: 2px;
 }
+
+.photo-list__user-details-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
 
 .photo-list__user-location {
   color: #838383;
+  margin-top: 0px;
+  font-size: 12px;
 }
