--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -2,37 +2,74 @@
   margin: 24px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/// Attempting unsuccessfully to incpporate SASS
+/// 
+// // Define variables
+// $light-body-background: white;
+// $dark-body-background: #282c34;
+// $transition-duration: 0.3s;
+// $transition-timing: ease-in-out;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+// // Create a mixin for applying themes
+// @mixin theme($body-background) {
+//   body {
+//     background-color: $body-background;
+//   }
+// }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+// // Apply the light theme by default
+// @include theme($light-body-background);
 
-.App-link {
-  color: #61dafb;
-}
+// // Apply the dark theme when the data-theme attribute is "dark"
+// [data-theme="dark"] {
+//   @include theme($dark-body-background);
+// }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+// // Apply global styles
+// * {
+//   transition: all $transition-duration $transition-timing;
+// }
+
+
+// $primary-color: #3498db;
+// $secondary-color: #2ecc71;
+// $font-size: 16px;
+// $padding: 10px;
+// body {
+//   background-color: aqua;
+// }
+
+// .App-logo {
+//   height: 40vmin;
+//   pointer-events: none;
+// }
+
+// @media (prefers-reduced-motion: no-preference) {
+//   .App-logo {
+//     animation: App-logo-spin infinite 20s linear;
+//   }
+// }
+
+// .App-header {
+//   background-color: #282c34;
+//   min-height: 100vh;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   justify-content: center;
+//   font-size: calc(10px + 2vmin);
+//   color: white;
+// }
+
+// .App-link {
+//   color: #61dafb;
+// }
+
+// @keyframes App-logo-spin {
+//   from {
+//     transform: rotate(0deg);
+//   }
+//   to {
+//     transform: rotate(360deg);
+//   }
+// }
